--- a/thiepmoitotnghiep/index.html
+++ b/thiepmoitotnghiep/index.html
@@ -707,35 +707,50 @@
       #book-container { width: 99vw; }
     }
     @media (max-width: 768px) {
+      #book-container {
+        width: 100vw;
+        min-width: 0;
+        max-width: 100vw;
+        padding: 0;
+      }
       .book-spread {
         flex-direction: column;
         min-height: 0;
-        transition: transform 0.35s, opacity 0.35s;
+        width: 100vw;
+        max-width: 100vw;
+        padding: 0;
       }
       .book-page {
-        min-height: 220px;
-        margin: 6px 0;
-        border-radius: 16px !important;
-        border: none !important;
-        width: 98vw;
-        max-width: 99vw;
-        padding: 18px 6vw 18px 6vw;
+        width: 100vw;
+        max-width: 100vw;
+        min-width: 0;
+        margin: 0;
+        border-radius: 0 !important;
+        padding: 18px 2vw 18px 2vw;
+        box-sizing: border-box;
       }
       .book-page.left, .book-page.right {
         border: none;
       }
-      #prev-page, #next-page {
-        top: unset;
-        bottom: -32px;
-        left: 30%;
+      .book-nav {
+        position: fixed;
+        bottom: 24px;
+        left: 16px;
         right: unset;
+        top: unset;
         transform: none;
-        margin: 0 8vw;
+        margin: 0;
+        z-index: 10001;
         width: 44px;
         height: 44px;
         font-size: 1.6rem;
+        background: #bfa58a;
+        opacity: 0.92;
       }
-      #next-page { left: unset; right: 30%; }
+      #next-page {
+        left: unset;
+        right: 16px;
+      }
     }
     .book-page.invitation-page, .book-page.wish-page, .book-page.parking-page {
       display: flex;
@@ -881,6 +896,7 @@
     </div>
   </div>
 
+  <!-- Giữ lại duy nhất book-container, xóa các section cũ -->
   <div id="book-container">
     <div class="book-spread" data-spread="0">
       <div class="book-page left cover-page">
